# simple-messenger

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  tailwind.config.js
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: cookies.rs  environment.rs  lib.rs  session.rs  state.rs  validator.rs
backend/src/auth/: authenticate.rs  mod.rs  register.rs
backend/src/auth/oauth/: google.rs  mod.rs
backend/src/redis/: mod.rs  oauth.rs  session.rs
common/: Cargo.toml
common/src/: lib.rs
config/: Dockerfile.redis  redis.conf
entity/: Cargo.toml
entity/src/: channel.rs  lib.rs  message.rs  prelude.rs  user.rs
frontend/: Cargo.toml
frontend/src/: chat.rs  error_template.rs  lib.rs  validation.rs
frontend/src/auth/: authentication.rs  mod.rs  registration.rs  registration_details.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
service/: Cargo.toml
service/src/: lib.rs  mutation.rs  query.rs
service/tests/: mock.rs  prepare.rs
src/: lib.rs  main.rs
src/server/: fileserv.rs  mod.rs
