[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend", optional = true }
common = { path = "../common" }
service = { path = "../service", optional = true }

cfg-if.workspace = true
gloo-net.workspace = true
http.workspace = true
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
serde.workspace = true
serde_qs = { workspace = true, optional = true }
thiserror.workspace = true
tower-cookies = { workspace = true, optional = true }
tracing.workspace = true

[dependencies.validator]
workspace = true
features = ["derive"]

[features]
ssr = [
    "dep:backend",
    "dep:service",

    "dep:leptos_axum",
    "dep:serde_qs",
    "dep:tower-cookies",
]
