[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true

[dependencies.sea-orm]
workspace = true
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
]

[dev-dependencies]
once_cell = "1.18.0"
tokio = { workspace = true, features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]